--- a/RazorPagesProject/RazorPagesProject/appsettings.json
+++ b/RazorPagesProject/RazorPagesProject/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\Local;Database=myUdemyDevDB;Trusted_Connection=True;"
+
+  }
 }
