Added Category EF migration to database.

--- a/RazorPagesProject/RazorPagesProject/appsettings.json
+++ b/RazorPagesProject/RazorPagesProject/appsettings.json
@@ -8,7 +8,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\Local;Database=myUdemyDevDB;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\Local;Database=RazorPagesDemo;Trusted_Connection=True;"
 
   }
 }
